# ctbprn_task

./: .gitignore  ctbprn_safe.py  optuna_report.md  optuna_results_detailed.csv  pyproject.toml  train_fused_v2.py
fused_attn_v2/: __init__.py  build_fused_v2.py  fused_v2.py
fused_attn_v2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
optuna_studies/: ctbprn_study.pkl
scripts/: analyze_ce_loss.py  analyze_optuna_results.py  check_routing.py  stream32.py  test_imports.py  train_local_only.py  train_memory_only.py  tune_optuna_memory_only.py  tune_optuna_memory_safe.py  vram_check.py
